:bug: use QueryModel instead of enum